2003-12-31  David Schleef  <ds@schleef.org>

	* gst/elements/gstshaper.c: (gst_shaper_link):
	* gst/elements/gsttee.c: (gst_tee_init), (gst_tee_request_new_pad):
	* gst/gstqueue.c: (gst_queue_link):
	  Negotiation fixes.

2003-12-31  David Schleef  <ds@schleef.org>

	* gst/gstpad.c: (gst_pad_proxy_pad_link), (gst_pad_proxy_fixate):
	* gst/gstpad.h: Add functions that are useful as default pad
	link and fixate functions for elements.

2003-12-30  David Schleef  <ds@schleef.org>

	* gst/gstpad.c: (gst_pad_link_try):
	  Fix segfault when attempting to return to old caps

2003-12-29  David Schleef  <ds@schleef.org>

	* gst/gstcaps.c: (gst_caps_normalize), (simplify_foreach),
	(gst_caps_structure_simplify), (gst_caps_simplify):
	* gst/gstcaps.h:
	  Add simplify function
	* gst/gstpad.c: (gst_pad_link_try), (gst_pad_try_set_caps),
	(gst_pad_perform_negotiate), (gst_pad_is_negotiated):
	* gst/gstpad.h:
	  Copy over srcnotify, sinknotify when calling old pad_link
	  functions.  Add new is_negotiated() function.
	* gst/gststructure.c: (gst_structure_copy):
	  Fix an incredibly stupid bug that should have been noticed
	  weeks ago.  _copy() returned the argument, not the new copy.

2003-12-27  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstcaps.c: (gst_caps_append):
	  add sanity checks
	* gst/gstcaps.h: (gst_caps_debug):
	  remove, it doesn't exist anymore.
	* gst/gstelement.c: (gst_element_threadsafe_properties_pre_run),
	(gst_element_threadsafe_properties_post_run):
	  make debugging messages not clutter up THREAD debug category
	(gst_element_negotiate_pads), (gst_element_clear_pad_caps),
	(gst_element_change_state):
	  update to new caps API
	* gst/gstinterface.c: (gst_implements_interface_cast):
	  don't put vital code in g_return_if_fail
	* gst/gstpad.c: (gst_pad_link_try), (gst_pad_try_set_caps), 
	(gst_pad_link_filtered):
	  add pst_pad_try_link and use it.
	(gst_pad_perform_negotiate), (gst_pad_renegotiate):
	  implement correctly, deprecate first one.